[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/SpikeByTime.gd" type="Script" id=1]
[ext_resource path="res://spikes.png" type="Texture" id=2]



[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 32, 10 )

[node name="SpikeByTime" type="Area2D"]

position = Vector2( 192, -128 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
timeEnabled = 3
timeDisabled = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 32, 32 )
scale = Vector2( 0.914286, 2.46154 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 32, 32 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="faseTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="." to="." method="_on_SpikeByTime_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="faseTimer" to="." method="_on_faseTimer_timeout"]


